added variables and typing

--- a/source/index.html
+++ b/source/index.html
@@ -11,6 +11,17 @@
     <!-- header -->
     <header id="header">
         header
+        <div class="text-danger">text-danger</div>
+        <div class="text-warning">text-warning</div>
+        <div class="text-success">text-success</div>
+        <div class="text-primary">text-primary</div>
+        <div class="text-accent">text-accent</div>
+        <div class="text-regular">text-regular</div>
+        <div class="text-disable">text-disable</div>
+        <div class="text-white">text-white</div>
+        <div class="text-black">text-black</div>
+        <div class="text-gray">text-gray</div>
+
     </header>
     <!-- main -->
     <main id="main">
