--- a/source/index.html
+++ b/source/index.html
@@ -25,7 +25,7 @@
     </header>
     <!-- main -->
     <main id="main">
-        main
+        main main
     </main>
     <!-- footer -->
     <footer id="footer">
