--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,19 @@
   <body>
     <!-- header -->
     <header id="header">
-        header
+        <nav id="navigation">
+            <ul class="nav-list">
+                <li class="nav-item active"> <a href="#">Menu item</a> </li>
+                <li class="nav-item"> <a href="#">Menu item</a> </li>
+                <li class="nav-item"> <a href="#">Menu item</a> </li>
+                <li class="nav-item"> <a href="#">Menu item</a> </li>
+                <li class="nav-item"> <a href="#">Menu item</a> </li>
+            </ul>
+        </nav>
+    </header>
+    <!-- main -->
+    <main id="main">
+        main
         <div class="text-danger">text-danger</div>
         <div class="text-warning">text-warning</div>
         <div class="text-success">text-success</div>
@@ -22,11 +34,6 @@
         <div class="text-white">text-white</div>
         <div class="text-black">text-black</div>
         <div class="text-gray">text-gray</div>
-
-    </header>
-    <!-- main -->
-    <main id="main">
-        main main
     </main>
     <!-- footer -->
     <footer id="footer">
