--- a/source/index.html
+++ b/source/index.html
@@ -10,11 +10,11 @@
   </head>
   <body>
     <!-- header -->
-    <header id="header">
-        <div class="logo-wrapper">
+    <header id="header" class="clearfix">
+        <div class="logo-wrapper floated">
             <a href="#"class="logo"></a>
         </div>
-        <nav id="navigation">
+        <nav id="navigation" class="floated">
             <ul class="nav-list">
                 <li class="nav-item active"> <a href="#">Menu item</a> </li>
                 <li class="nav-item"> <a href="#">Menu item</a> </li>
@@ -25,8 +25,8 @@
         </nav>
     </header>
     <!-- main -->
-    <main id="main">
-        <div class="action-menu">
+    <main id="main" class="clearfix">
+        <div class="action-menu floated-20">
             <button type="button" name="button" class="btn btn-small btn-success btn-block">connect</button>
             <button type="button" name="button" class="btn btn-small btn-danger btn-block">break</button>
             <button type="button" name="button" class="btn btn-small btn-regular btn-block">some action</button>
@@ -34,182 +34,186 @@
             <button type="button" name="button" class="btn btn-small btn-primary btn-block">some action</button>
 
         </div>
-        <div class="content">
-            <div class="text-danger">text-danger</div>
-            <div class="text-warning">text-warning</div>
-            <div class="text-success">text-success</div>
-            <div class="text-primary">text-primary</div>
-            <div class="text-accent">text-accent</div>
-            <div class="text-regular">text-regular</div>
-            <div class="text-disable">text-disable</div>
-            <div class="text-white">text-white</div>
-            <div class="text-black">text-black</div>
-            <div class="text-gray">text-gray</div>
-            <div>
-                <button type="button" name="button" class="btn btn-small btn-primary">primary small</button>
-                <button type="button" name="button" class="btn btn-medium btn-primary">primary medium</button>
-                <button type="button" name="button" class="btn btn-large btn-primary">primary large</button>
+        <div class="content floated-80 clearfix">
+            <div class="data floated-40">
+                <div class="text-danger">text-danger</div>
+                <div class="text-warning">text-warning</div>
+                <div class="text-success">text-success</div>
+                <div class="text-primary">text-primary</div>
+                <div class="text-accent">text-accent</div>
+                <div class="text-regular">text-regular</div>
+                <div class="text-disable">text-disable</div>
+                <div class="text-white">text-white</div>
+                <div class="text-black">text-black</div>
+                <div class="text-gray">text-gray</div>
+                <div class="text-center">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>header</th>
+                                <th>header</th>
+                                <th>header</th>
+                                <th>header</th>
+                                <th>header</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>parameter name</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                            </tr>
+                            <tr>
+                                <td>parameter name</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                            </tr>
+                            <tr>
+                                <td>parameter name</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                            </tr>
+                            <tr>
+                                <td>parameter name</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                            </tr>
+                            <tr>
+                                <td>parameter name</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                            </tr>
+                            <tr>
+                                <td>parameter name</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                            </tr>
+                            <tr>
+                                <td>parameter name</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                            </tr>
+                            <tr>
+                                <td>parameter name</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                            </tr>
+                            <tr>
+                                <td>parameter name</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                            </tr>
+                            <tr>
+                                <td>parameter name</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                            </tr>
+                            <tr>
+                                <td>parameter name</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                            </tr>
+                            <tr>
+                                <td>parameter name</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                            </tr>
+                            <tr>
+                                <td>parameter name</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                            </tr>
+                            <tr>
+                                <td>parameter name</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                            </tr>
+                            <tr>
+                                <td>parameter name</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                            </tr>
+                            <tr>
+                                <td>parameter name</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                            </tr>
+                            <tr>
+                                <td>parameter name</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                            </tr>
+                            <tr>
+                                <td>parameter name</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                                <td>value</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
-            <div>
-                <button type="button" name="button" class="btn btn-small btn-danger">danger small</button>
-                <button type="button" name="button" class="btn btn-medium btn-danger">danger medium</button>
-                <button type="button" name="button" class="btn btn-large btn-danger">danger large</button>
-            </div>
-            <div>
-                <button type="button" name="button" class="btn btn-small btn-success">success small</button>
-                <button type="button" name="button" class="btn btn-medium btn-success">success medium</button>
-                <button type="button" name="button" class="btn btn-large btn-success">success large</button>
-            </div>
-            <div>
-                <button type="button" name="button" class="btn btn-small btn-regular">regular small</button>
-                <button type="button" name="button" class="btn btn-medium btn-regular">regular medium</button>
-                <button type="button" name="button" class="btn btn-large btn-regular">regular large</button>
-            </div>
-            <div>
-                <button type="button" name="button" class="btn btn-small btn-link">link small</button>
-                <button type="button" name="button" class="btn btn-medium btn-link">link medium</button>
-                <button type="button" name="button" class="btn btn-large btn-link">link large</button>
-            </div>
-            <div class="text-center">
-                <table>
-                    <thead>
-                        <tr>
-                            <th>header</th>
-                            <th>header</th>
-                            <th>header</th>
-                            <th>header</th>
-                            <th>header</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>parameter name</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                        </tr>
-                        <tr>
-                            <td>parameter name</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                        </tr>
-                        <tr>
-                            <td>parameter name</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                        </tr>
-                        <tr>
-                            <td>parameter name</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                        </tr>
-                        <tr>
-                            <td>parameter name</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                        </tr>
-                        <tr>
-                            <td>parameter name</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                        </tr>
-                        <tr>
-                            <td>parameter name</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                        </tr>
-                        <tr>
-                            <td>parameter name</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                        </tr>
-                        <tr>
-                            <td>parameter name</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                        </tr>
-                        <tr>
-                            <td>parameter name</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                        </tr>
-                        <tr>
-                            <td>parameter name</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                        </tr>
-                        <tr>
-                            <td>parameter name</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                        </tr>
-                        <tr>
-                            <td>parameter name</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                        </tr>
-                        <tr>
-                            <td>parameter name</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                        </tr>
-                        <tr>
-                            <td>parameter name</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                        </tr>
-                        <tr>
-                            <td>parameter name</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                        </tr>
-                        <tr>
-                            <td>parameter name</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                        </tr>
-                        <tr>
-                            <td>parameter name</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                            <td>value</td>
-                        </tr>
-                    </tbody>
-                </table>
+            <div class="visualization floated-60">
+                <div>
+                    <button type="button" name="button" class="btn btn-small btn-primary">primary small</button>
+                    <button type="button" name="button" class="btn btn-medium btn-primary">primary medium</button>
+                    <button type="button" name="button" class="btn btn-large btn-primary">primary large</button>
+                </div>
+                <div>
+                    <button type="button" name="button" class="btn btn-small btn-danger">danger small</button>
+                    <button type="button" name="button" class="btn btn-medium btn-danger">danger medium</button>
+                    <button type="button" name="button" class="btn btn-large btn-danger">danger large</button>
+                </div>
+                <div>
+                    <button type="button" name="button" class="btn btn-small btn-success">success small</button>
+                    <button type="button" name="button" class="btn btn-medium btn-success">success medium</button>
+                    <button type="button" name="button" class="btn btn-large btn-success">success large</button>
+                </div>
+                <div>
+                    <button type="button" name="button" class="btn btn-small btn-regular">regular small</button>
+                    <button type="button" name="button" class="btn btn-medium btn-regular">regular medium</button>
+                    <button type="button" name="button" class="btn btn-large btn-regular">regular large</button>
+                </div>
+                <div>
+                    <button type="button" name="button" class="btn btn-small btn-link">link small</button>
+                    <button type="button" name="button" class="btn btn-medium btn-link">link medium</button>
+                    <button type="button" name="button" class="btn btn-large btn-link">link large</button>
+                </div>
             </div>
         </div>
     </main>
