* added aside with action menu and styles for it, added styles for navigation

--- a/source/index.html
+++ b/source/index.html
@@ -19,23 +19,41 @@
                 <li class="nav-item active"> <a href="#">Menu item</a> </li>
                 <li class="nav-item"> <a href="#">Menu item</a> </li>
                 <li class="nav-item"> <a href="#">Menu item</a> </li>
-                <li class="nav-item"> <a href="#">Menu item</a> </li>
+                <li class="nav-item"> <a href="#">Menu item long</a> </li>
                 <li class="nav-item"> <a href="#">Menu item</a> </li>
             </ul>
         </nav>
     </header>
+    <aside class="aside">
+        <label for="action-menu-toggle">
+            <div class="cilcle"></div>
+            <div class="cilcle"></div>
+            <div class="cilcle"></div>
+        </label>
+        <input type="checkbox" name="togle-button" id="action-menu-toggle">
+        <ul class="action-menu">
+            <li><button type="button" name="button" class="btn btn-small btn-success btn-block">connect</button></li>
+            <li><button type="button" name="button" class="btn btn-small btn-danger btn-block">break</button></li>
+            <li><button type="button" name="button" class="btn btn-small btn-regular btn-block">some action</button></li>
+            <li><button type="button" name="button" class="btn btn-small btn-regular btn-block">some action</button></li>
+            <li><button type="button" name="button" class="btn btn-small btn-success btn-block">connect</button></li>
+            <li><button type="button" name="button" class="btn btn-small btn-danger btn-block">break</button></li>
+            <li><button type="button" name="button" class="btn btn-small btn-regular btn-block">some action</button></li>
+            <li><button type="button" name="button" class="btn btn-small btn-regular btn-block">some action</button></li>
+            <li><button type="button" name="button" class="btn btn-small btn-success btn-block">connect</button></li>
+            <li><button type="button" name="button" class="btn btn-small btn-danger btn-block">break</button></li>
+            <li><button type="button" name="button" class="btn btn-small btn-regular btn-block">some action</button></li>
+            <li><button type="button" name="button" class="btn btn-small btn-regular btn-block">some action</button></li>
+            <li><button type="button" name="button" class="btn btn-small btn-success btn-block">connect</button></li>
+            <li><button type="button" name="button" class="btn btn-small btn-danger btn-block">break</button></li>
+            <li><button type="button" name="button" class="btn btn-small btn-regular btn-block">some action</button></li>
+            <li><button type="button" name="button" class="btn btn-small btn-regular btn-block">some action</button></li>
+        </ul>
+    </aside>
     <!-- main -->
     <main id="main" class="clearfix">
-        <div class="action-menu floated-20">
-            <button type="button" name="button" class="btn btn-small btn-success btn-block">connect</button>
-            <button type="button" name="button" class="btn btn-small btn-danger btn-block">break</button>
-            <button type="button" name="button" class="btn btn-small btn-regular btn-block">some action</button>
-            <button type="button" name="button" class="btn btn-small btn-regular btn-block">some action</button>
-            <button type="button" name="button" class="btn btn-small btn-primary btn-block">some action</button>
-
-        </div>
-        <div class="content floated-80 clearfix">
-            <div class="data floated-40">
+        <div class="content clearfix">
+            <div class="data">
                 <div class="text-danger">text-danger</div>
                 <div class="text-warning">text-warning</div>
                 <div class="text-success">text-success</div>
@@ -47,7 +65,7 @@
                 <div class="text-black">text-black</div>
                 <div class="text-gray">text-gray</div>
                 <div class="text-center">
-                    <table>
+                    <!-- <table>
                         <thead>
                             <tr>
                                 <th>header</th>
@@ -185,11 +203,11 @@
                                 <td>value</td>
                             </tr>
                         </tbody>
-                    </table>
+                    </table> -->
                 </div>
             </div>
-            <div class="visualization floated-60">
-                <div>
+            <div class="visualization">
+                <!-- <div>
                     <button type="button" name="button" class="btn btn-small btn-primary">primary small</button>
                     <button type="button" name="button" class="btn btn-medium btn-primary">primary medium</button>
                     <button type="button" name="button" class="btn btn-large btn-primary">primary large</button>
@@ -213,7 +231,7 @@
                     <button type="button" name="button" class="btn btn-small btn-link">link small</button>
                     <button type="button" name="button" class="btn btn-medium btn-link">link medium</button>
                     <button type="button" name="button" class="btn btn-large btn-link">link large</button>
-                </div>
+                </div> -->
             </div>
         </div>
     </main>
