* finalized styles for aside, delete unused files, added warning for old IE

--- a/source/index.html
+++ b/source/index.html
@@ -11,6 +11,9 @@
   <body>
     <!-- header -->
     <header id="header" class="clearfix">
+        <!--[if lt IE 10]>
+        <h1 style="color: red; text-align: center; margin-bottom: 1000px;">Your browser is out of date. Use Google Chrome, Opera, Firefox to view this site correctly...</h1>
+        <![endif]-->
         <div class="logo-wrapper floated">
             <a href="#"class="logo"></a>
         </div>
@@ -36,18 +39,21 @@
             <li><button type="button" name="button" class="btn btn-small btn-danger btn-block">break</button></li>
             <li><button type="button" name="button" class="btn btn-small btn-regular btn-block">some action</button></li>
             <li><button type="button" name="button" class="btn btn-small btn-regular btn-block">some action</button></li>
-            <li><button type="button" name="button" class="btn btn-small btn-success btn-block">connect</button></li>
-            <li><button type="button" name="button" class="btn btn-small btn-danger btn-block">break</button></li>
-            <li><button type="button" name="button" class="btn btn-small btn-regular btn-block">some action</button></li>
-            <li><button type="button" name="button" class="btn btn-small btn-regular btn-block">some action</button></li>
-            <li><button type="button" name="button" class="btn btn-small btn-success btn-block">connect</button></li>
-            <li><button type="button" name="button" class="btn btn-small btn-danger btn-block">break</button></li>
-            <li><button type="button" name="button" class="btn btn-small btn-regular btn-block">some action</button></li>
-            <li><button type="button" name="button" class="btn btn-small btn-regular btn-block">some action</button></li>
-            <li><button type="button" name="button" class="btn btn-small btn-success btn-block">connect</button></li>
-            <li><button type="button" name="button" class="btn btn-small btn-danger btn-block">break</button></li>
-            <li><button type="button" name="button" class="btn btn-small btn-regular btn-block">some action</button></li>
-            <li><button type="button" name="button" class="btn btn-small btn-regular btn-block">some action</button></li>
+            <li><button type="button" name="button" class="btn btn-small btn-primary btn-block">primary</button></li>
+            <li><button type="button" name="button" class="btn btn-small btn-danger btn-block">danger</button></li>
+            <li><button type="button" name="button" class="btn btn-small btn-success btn-block">success</button></li>
+            <li><button type="button" name="button" class="btn btn-small btn-link btn-block">link</button></li>
+            <li><button type="button" name="button" class="btn btn-small btn-success btn-block">Сделать хорошо</button></li>
+            <li><button type="button" name="button" class="btn btn-small btn-regular btn-block">Вова</button></li>
+            <li><button type="button" name="button" class="btn btn-small btn-regular btn-block">Учи</button></li>
+            <li><button type="button" name="button" class="btn btn-small btn-regular btn-block">Новые</button></li>
+            <li><button type="button" name="button" class="btn btn-small btn-regular btn-block">Технологии</button></li>
+            <li><button type="button" name="button" class="btn btn-small btn-success btn-block">Beer</button></li>
+            <li><button type="button" name="button" class="btn btn-small btn-danger btn-block">Vodka</button></li>
+            <li><a type="button" name="button" class="btn btn-small btn-link btn-block">Salo</a></li>
+            <li><button type="button" name="button" class="btn btn-small btn-success btn-block"><span class="text-lowercase">Кнопка из &lt;button&gt;</span></button></li>
+            <li><a type="button" name="button" class="btn btn-small btn-success btn-block"><span class="text-lowercase">Кнопка из &lt;a&gt;</a></span></a></li>
+
         </ul>
     </aside>
     <!-- main -->
