* added styles for cadrs * improved footer * improved tables

--- a/source/index.html
+++ b/source/index.html
@@ -57,20 +57,30 @@
     <main id="main" class="clearfix">
         <div class="position">Цех №5</div>
         <div class="content clearfix">
-            <div class="data">
-                <div class="text-danger">text-danger</div>
-                <div class="text-warning">text-warning</div>
-                <div class="text-success">text-success</div>
-                <div class="text-primary">text-primary</div>
-                <div class="text-accent">text-accent</div>
-                <div class="text-regular">text-regular</div>
-                <div class="text-disable">text-disable</div>
-                <div class="text-white">text-white</div>
-                <div class="text-black">text-black</div>
-                <div class="text-gray">text-gray</div>
-                <div class="text-center">
-                    <p>Температура</p>
-                    <table class='table'>
+            <div class="data clearfix">
+                <div class="card card-50">
+                    <div class="card-title">
+                        card-title
+                    </div>
+                    <div class="card-content">
+                        <div class="text-danger">text-danger</div>
+                        <div class="text-warning">text-warning</div>
+                        <div class="text-success">text-success</div>
+                        <div class="text-primary">text-primary</div>
+                        <div class="text-accent">text-accent</div>
+                        <div class="text-regular">text-regular</div>
+                        <div class="text-disable">text-disable</div>
+                        <div class="text-white">text-white</div>
+                        <div class="text-black">text-black</div>
+                        <div class="text-gray">text-gray</div>
+                    </div>
+                    <div class="card-footer">
+                        card-footer
+                    </div>
+                </div>
+                <div class="card card-50">
+                    <div class="card-title">Температура</div>
+                    <table class='table table-block'>
                         <thead>
                             <tr>
                                 <th>Датчики</th>
@@ -190,6 +200,50 @@
                             </tr>
                         </tbody>
                     </table>
+                </div>
+                <div class="card card-25">
+                    <div class="card-title">
+                        card-title
+                    </div>
+                    <div class="card-content">
+                        content for card-25
+                    </div>
+                    <div class="card-footer">
+                        card-footer
+                    </div>
+                </div>
+                <div class="card card-25">
+                    <div class="card-title">
+                        card-title
+                    </div>
+                    <div class="card-content">
+                        content for card-25
+                    </div>
+                    <div class="card-footer">
+                        card-footer
+                    </div>
+                </div>
+                <div class="card card-25">
+                    <div class="card-title">
+                        card-title
+                    </div>
+                    <div class="card-content">
+                        content for card-25
+                    </div>
+                    <div class="card-footer">
+                        card-footer
+                    </div>
+                </div>
+                <div class="card card-25">
+                    <div class="card-title">
+                        card-title
+                    </div>
+                    <div class="card-content">
+                        content for card-25
+                    </div>
+                    <div class="card-footer">
+                        card-footer
+                    </div>
                 </div>
             </div>
             <div class="visualization">
